@@ -4,7 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Collections;
@@ -103,7 +103,7 @@ public class RedisMembership implements Membership, SchedulingConfigurer {
 				boolean alive = false;
 				String url = "http://" + member + "/actuator/health";
 				try {
-					HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+					HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
 					conn.setConnectTimeout(3000);
 					conn.setReadTimeout(2000);
 					conn.setInstanceFollowRedirects(false);
